test/tasty/neg/src-2/TestDelayedChained.check
TestDelayedChained_fail.scala:4: warning: match may not be exhaustive.
It would fail on the following inputs: (_ : tastytest.DelayedChained.Internal.Branch), LeafB(), LeafC()
  def foo(r: DelayedChained.Root): Unit = r match { case _: DelayedChained.LeafA => ()  }
                                          ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
